--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         document.querySelector(".face").classList.remove("spin");
       }
     </script>
-    <title>Document</title>
+    <title>ACP-Z - Ballard of the Mallard</title>
   </head>
   <body>
     <div class="App">
